# ssm_config_daemon

./: Cargo.toml  README.md  sample_config.json  sample_nginx.hbs
src/: config.rs  error.rs  kinesis_consumer.rs  main.rs  parameter_store.rs
