[package]
name = "ssm_config_daemon"
version = "0.1.1"
authors = ["Joseph Gimenez <joseph.gimenez@snagajob.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
daemonize = "0.4.1"
handlebars = "2.0.0-beta.2"
rusoto_core = "0.38.0"
rusoto_kinesis = "0.38.0"
rusoto_ssm = "0.38.0"
serde = "1.0.90"
serde_json = "1.0.39"
serde_derive = "1.0.90"
